--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
-Version
+Version 1.24
 
 - Queries:
   query secret x public_vars x1, ..., xn.
@@ -17,12 +17,16 @@ in the library of cryptographic primitives.
 for instance)
 2/ to infer more facts by making case distinctions depending on 
 the order of definition of variables.
+- Use facts inferred from the simultaneous definition of several
+variables in the proof of correspondences.
 - Improved collection of facts: when CryptoVerif collects the
 facts that hold at each program point, it can also take into account
 variables that cannot be defined at a certain program point, variables
 that cannot be simultaneously defined, and elsefind facts. (This is a
 bit costly, so it is disabled by default. You can enable it by 
 "set improvedFactCollection = true".)
+- Setting "set casesInCorresp = false" to disable the case distinction
+in the proof of correspondence properties, in case it is too slow.
 - Improved collection of facts and defined variables: take into
 account more often that the variables after the current program
 point in the current input-output block are defined; take into
@@ -46,6 +50,8 @@ simplification, which could lead to an internal error.
 - Fixed bug that could cause an internal error
 "equational theory has no neutral element in Terms.get_neutral"
 - Fixed infinite loop in replacement of a variable with its value
+- Fixed infinite loop in testing of the equality between terms
+taking into account known equalities.
 
 Version 1.23
 
