fixed typos related to 'bound', reported by B. Lipp

--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -360,7 +360,7 @@ It is intended to be used in the right-hand side
 of the definitions of some cryptographic primitives. (See also
 the \texttt{equiv} declaration; events in the right-hand side can be
 used when the simulation of left-hand side by the right-hand side
-fails. CryptoVerif is going bound the probability that the event is
+fails. CryptoVerif is going to find a bound for the probability that the event is
 executed and include it in the probability of success of an attack.)
 
 \item \texttt{insert} $\mathit{tbl}\texttt{(}M_1, \ldots, M_n\texttt{)}; M$
