--- a/TODO
+++ b/TODO
@@ -142,22 +142,18 @@ That should be sufficient for modules that want to read the variable.
    of if/let/find/get? I need to choose replication indices in the pass
    check_process1.
 
-   TO DO  Function symbols defined inside macros (without appearing as
-   argument) may in fact be used in the script, if one guesses how
-   they are renamed by macro expansion. This is not
-   logical. Advantage: that allows parsing intermediate games using
-   those symbols. A nicer way to achieve that would be to pass all
-   names as arguments of macros, but that may be a bit painful. We
-   could have two sets of macros. That's probably the best. But if we
-   change the set of macros during a proof, we may need to revise
-   variable numbers, etc.
+   TO DO To allow parsing intermediate games using symbols local
+   to macros, have a second set of macros that passes all
+   symbols as arguments. (The macros *_r can be replaced by macros of
+   this second set.) Note that if we change the set of macros during a
+   proof, we may need to revise variable numbers, etc.
    TO DO (later) In practice, when I really want to read
    intermediate games, CryptoVerif should create a specific
    environment from the initial game, containing all functions (even
    those local to macros) as well as constants cst_<type> and events
    introduced by CryptoVerif.
 
-   TO DO Find a way to avoid clashes between names in the script and
+   DONE Find a way to avoid clashes between names in the script and
    names local to macros. The problem appears only for global
    declarations that are not defined in the script. Local variables
    are renamed. And correctly declared globals are reserved by
