--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -99,6 +99,9 @@ $\nonterm{filename}$ ends with \texttt{.ocv}, and otherwise it uses the
   $\nonterm{filename}\texttt{.ocvl}$. The library file typically
   contains default declarations useful for all protocols.
 
+\item $\texttt{-oproof }\nonterm{filename}$: Output the proof
+in the given file name, instead of displaying it on the standard output.
+
 \item $\texttt{-tex }\nonterm{filename}$: Activates TeX output, and sets
 the output file name. In this mode, CryptoVerif outputs a TeX version
 of the proof, in the given file.
